# carbon-sequestration-index

./: .gitignore  CONTRIBUTING.md  README.md  app.py  debug_imports.py  pyproject.toml  requirements.txt
geonrw_samples/: aachen_296_5625_rgb.jp2  aachen_296_5625_seg.tif  aachen_299_5619_rgb.jp2  aachen_299_5619_seg.tif  aachen_299_5629_rgb.jp2  aachen_299_5629_seg.tif  bergisch_372_5650_rgb.jp2  bergisch_372_5650_seg.tif  bielefeld_460_5755_rgb.jp2  bielefeld_460_5755_seg.tif  bielefeld_464_5756_rgb.jp2  bielefeld_464_5756_seg.tif  bielefeld_464_5761_rgb.jp2  bielefeld_464_5761_seg.tif  bielefeld_471_5764_rgb.jp2  bielefeld_471_5764_seg.tif  bochum_376_5696_rgb.jp2  bochum_376_5696_seg.tif  bochum_379_5707_rgb.jp2  bochum_379_5707_seg.tif  bochum_381_5705_rgb.jp2  bochum_381_5705_seg.tif  bottrop_353_5720_rgb.jp2  bottrop_353_5720_seg.tif  bottrop_356_5712_rgb.jp2  bottrop_356_5712_seg.tif  bottrop_359_5709_rgb.jp2  bottrop_359_5709_seg.tif  bottrop_360_5719_rgb.jp2  bottrop_360_5719_seg.tif  coesfeld_376_5749_rgb.jp2  coesfeld_376_5749_seg.tif  dortmund_385_5709_rgb.jp2  dortmund_385_5709_seg.tif  dortmund_388_5714_rgb.jp2  dortmund_388_5714_seg.tif  dortmund_394_5704_rgb.jp2  dortmund_394_5704_seg.tif  dueren_316_5635_rgb.jp2  dueren_316_5635_seg.tif  (+168 more)
scripts/: debug_detection.py  debug_detection_batch.py
src/carbon/: estimation.py  species.py
src/utils/: image_io.py
src/vegetation/: detection.py  ndvi.py
tests/: check_detectree.py  mock_test_pipeline.py  simple_test.py  small_test_pipeline.py  test_pipeline.py
